# workspace

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kesetel/mobile/: MyApplictaion.java
app/src/main/java/com/kesetel/mobile/present/: BasePresent.java
app/src/main/res/layout/: activity_bsdiffpatch.xml  activity_main.xml  activity_second.xml
bsdiffpatch/: build.gradle
bsdiffpatch/src/main/: AndroidManifest.xml
bsdiffpatch/src/main/jni/: CMakeLists.txt
droidpluginlib/: build.gradle
droidpluginlib/src/androidTest/java/com/example/droidpluginlib/: ExampleInstrumentedTest.java
droidpluginlib/src/main/: AndroidManifest.xml
droidpluginlib/src/test/java/com/example/droidpluginlib/: ExampleUnitTest.java
helper/: build.gradle
helper/src/androidTest/java/com/example/helper/: ExampleInstrumentedTest.java
helper/src/main/: AndroidManifest.xml
helper/src/test/java/com/example/helper/: ExampleUnitTest.java
logutil/: build.gradle
logutil/src/androidTest/java/com/forlong401/log/: ExampleInstrumentedTest.java
logutil/src/main/: AndroidManifest.xml
logutil/src/main/res/values/: strings.xml
logutil/src/test/java/com/forlong401/log/: ExampleUnitTest.java
okhttputils/: build.gradle
okhttputils/src/androidTest/java/com/example/okhttputils/: ExampleInstrumentedTest.java
okhttputils/src/main/: AndroidManifest.xml
okhttputils/src/test/java/com/example/okhttputils/: ExampleUnitTest.java
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
plugin/src/main/res/layout/: activity_main.xml
(+213 files in other folders)
